--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="flex flex-col md:flex-row items-center gap-6">
                 <div class="flex-shrink-0">
                     <!-- 画像URLをここに入れる -->
-                    <img src="https://placehold.co/150x150/E2E8F0/64748B?text=キャラ1" alt="キャラクター1" class="rounded-full shadow-lg">
+                    <img src="https://github.com/tusSaito/Igo_Gemini-slide/blob/main/1000012938%20(1).png" alt="キャラクター1" class="rounded-full shadow-lg">
                 </div>
                 <div class="speech-bubble p-6 flex-grow">
                     <p class="text-lg leading-relaxed">
@@ -84,7 +84,7 @@
             <div class="flex flex-col md:flex-row-reverse items-center gap-6">
                 <div class="flex-shrink-0">
                     <!-- 画像URLをここに入れる -->
-                    <img src="https://placehold.co/150x150/E2E8F0/64748B?text=キャラ2" alt="キャラクター2" class="rounded-full shadow-lg">
+                    <img src="https://github.com/tusSaito/Igo_Gemini-slide/blob/main/1000012941(1).png" alt="キャラクター2" class="rounded-full shadow-lg">
                 </div>
                 <div class="speech-bubble p-6 flex-grow" style="--bubble-arrow-position: calc(100% + 22px);">
                     <p class="text-lg leading-relaxed mb-4">
@@ -112,7 +112,7 @@
             <div class="flex flex-col md:flex-row items-center gap-6">
                 <div class="flex-shrink-0">
                     <!-- 画像URLをここに入れる -->
-                    <img src="https://placehold.co/150x150/E2E8F0/64748B?text=キャラ3" alt="キャラクター3" class="rounded-full shadow-lg">
+                    <img src="https://github.com/tusSaito/Igo_Gemini-slide/blob/main/1000012938%20(1).png" alt="キャラクター3" class="rounded-full shadow-lg">
                 </div>
                 <div class="speech-bubble p-6 flex-grow">
                     <p class="text-lg leading-relaxed">
