--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h1 class="text-3xl md:text-5xl font-bold text-slate-900 mb-2">囲碁を通じたコミュニケーションゲーム</h1>
             <p class="text-base md:text-lg font-semibold text-indigo-600 mb-4">― このアイデアはGeminiと共に創られました ―</p>
             <p class="text-lg md:text-xl text-slate-600">人間関係を深め、幸福度向上を目指す新しい囲碁体験</p>
-            <p class="text-sm text-slate-500 mt-4">共同制作者: MAPIYA, YK, akiyuki, broccoli, けんゆー, deep leaner</p>
+            <p class="text-sm text-slate-500 mt-4">共同制作者: MAPIYA, YK, akiyuki, broccoli, けんゆー, deep learner</p>
         </header>
 
         <!-- 2. 社会課題セクション -->
@@ -68,7 +68,7 @@
             <div class="flex flex-col md:flex-row items-center gap-6">
                 <div class="flex-shrink-0">
                     <!-- 画像URLをここに入れる -->
-                    <img src="https://github.com/tusSaito/Igo_Gemini-slide/blob/main/1000012938%20(1).png" alt="キャラクター1" class="rounded-full shadow-lg">
+                    <img src="1000012938(1).png" alt="1000012938(1).png" class="rounded-full shadow-lg">
                 </div>
                 <div class="speech-bubble p-6 flex-grow">
                     <p class="text-lg leading-relaxed">
@@ -84,7 +84,7 @@
             <div class="flex flex-col md:flex-row-reverse items-center gap-6">
                 <div class="flex-shrink-0">
                     <!-- 画像URLをここに入れる -->
-                    <img src="https://github.com/tusSaito/Igo_Gemini-slide/blob/main/1000012941(1).png" alt="キャラクター2" class="rounded-full shadow-lg">
+                    <img src="1000012941(1).png" alt="1000012941(1).png" class="rounded-full shadow-lg">
                 </div>
                 <div class="speech-bubble p-6 flex-grow" style="--bubble-arrow-position: calc(100% + 22px);">
                     <p class="text-lg leading-relaxed mb-4">
@@ -112,7 +112,7 @@
             <div class="flex flex-col md:flex-row items-center gap-6">
                 <div class="flex-shrink-0">
                     <!-- 画像URLをここに入れる -->
-                    <img src="https://github.com/tusSaito/Igo_Gemini-slide/blob/main/1000012938%20(1).png" alt="キャラクター3" class="rounded-full shadow-lg">
+                    <img src="スクリーンショット 2025-07-08 180347.png" alt="スクリーンショット 2025-07-08 180347.png" class="rounded-full shadow-lg">
                 </div>
                 <div class="speech-bubble p-6 flex-grow">
                     <p class="text-lg leading-relaxed">
