--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="flex flex-col md:flex-row items-center gap-6">
                 <div class="flex-shrink-0">
                     <!-- 画像URLをここに入れる -->
-                    <img src="1000012938 (1).png" alt="1000012938 (1).png" class="rounded-full shadow-lg w-40 h-40 object-cover">
+                    <img src="1000012938 (1).png" alt="1000012938 (1).png" class="rounded-full shadow-lg w-60 h-60 object-cover">
                 </div>
                 <div class="speech-bubble p-6 flex-grow">
                     <p class="text-lg leading-relaxed">
@@ -84,7 +84,7 @@
             <div class="flex flex-col md:flex-row-reverse items-center gap-6">
                 <div class="flex-shrink-0">
                     <!-- 画像URLをここに入れる -->
-                    <img src="1000012941 (1).png" alt="1000012941 (1).png" class="rounded-full shadow-lg w-40 h-40 object-cover">
+                    <img src="1000012941 (1).png" alt="1000012941 (1).png" class="rounded-full shadow-lg w-60 h-60 object-cover">
                 </div>
                 <div class="speech-bubble p-6 flex-grow" style="--bubble-arrow-position: calc(100% + 22px);">
                     <p class="text-lg leading-relaxed mb-4">
@@ -112,7 +112,7 @@
             <div class="flex flex-col md:flex-row items-center gap-6">
                 <div class="flex-shrink-0">
                     <!-- 画像URLをここに入れる -->
-                    <img src="スクリーンショット 2025-07-08 180347.png" alt="スクリーンショット 2025-07-08 180347.png" class="rounded-full shadow-lg">
+                    <img src="スクリーンショット 2025-07-08 180347.png" alt="スクリーンショット 2025-07-08 180347.png" class="rounded-full shadow-lg w-60 h-60 object-cover">
                 </div>
                 <div class="speech-bubble p-6 flex-grow">
                     <p class="text-lg leading-relaxed">
