--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
             <div class="flex flex-col md:flex-row items-center gap-6">
                 <div class="flex-shrink-0">
                     <!-- 画像URLをここに入れる -->
-                    <img src="スクリーンショット 2025-07-08 180347.png" alt="スクリーンショット 2025-07-08 180347.png" class="rounded-full shadow-lg w-60 h-60 object-cover">
-                </div>
+                     <img src="1000012941 (1).png" alt="1000012941 (1).png" class="rounded-full shadow-lg w-60 h-60 object-cover">
                 <div class="speech-bubble p-6 flex-grow">
                     <p class="text-lg leading-relaxed">
                         囲碁は「手談（しゅだん）」とも呼ばれます。言葉を交わさなくても、石を打つ手つき一つで相手の意図を読み、自分の考えを伝える。この<span class="font-bold text-indigo-600">非言語コミュニケーション</span>によって、言葉の壁がある相手や初対面の人とも、深いレベルでの交流が生まれます。
