--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="flex flex-col md:flex-row items-center gap-6">
                 <div class="flex-shrink-0">
                     <!-- 画像URLをここに入れる -->
-                    <img src="1000012938 (1).png" alt="1000012938 (1).png" class="rounded-full shadow-lg w-60 h-60 object-cover">
+                    <img src="スクリーンショット 2025-07-09 214951.png" alt="スクリーンショット 2025-07-09 214951.png" class="rounded-full shadow-lg w-60 h-60 object-cover">
                 </div>
                 <div class="speech-bubble p-6 flex-grow">
                     <p class="text-lg leading-relaxed">
